--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Today is Nick's birthday 🎉</h1>
-        <img src="nick.jpg" class="avatar">
+        <img src="nick.jpg" id="avatar">
         <h2>24 years old</h2>
         <h4>01.11.2022</h4>
     </body>
