--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+
         <div id="header">
             <h1>Today is Nick's birthday 🎉</h1>
-            <img src="nick.jpg" id="bff-img">
+            <img src="images/nick.jpg" id="bff-img">
             <h2 id="bday-age">24 years old</h2>
             <h4 id="bday-date">01.11.2022</h4>
         </div>
+
+        <div class="gift-section">
+            <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
+            <h3 class="gift-hint">(Hover over the gift)</h3>
+            <img class="gift-img" src="images/gift-cover.jpg">
+        </div>
+
     </body>
 </html>
 
