--- a/index.html
+++ b/index.html
@@ -2,25 +2,20 @@
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
         <div id="header">
             <h1>Today is Nick's birthday 🎉</h1>
-            <img src="images/nick.jpg" id="bff-img">
+            <img id="bff-img" src="images/nick.jpg">
             <h2 id="bday-age">24 years old</h2>
             <h4 id="bday-date">01.11.2022</h4>
-        </div>
-
+        </div> 
         <div class="gift-section">
             <h2 class="gift-title">Here's how happy I am for you today 🥳</h2>
             <h3 class="gift-hint">(Hover over the gift)</h3>
-            <img class="gift-img" src="images/gift-cover.jpg">
+            <div class="gift-img"></div>
         </div>
-
     </body>
 </html>
-
-
