--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
             <div class="gift-img" id="gift-img-cheers" role="img" ></div>
         </div>
 
+        <!-- Add the footer here. -->
+        <p id="footer">Want to create your own Birthday GIFt site? Take <a href="https://scrimba.com/learn/htmlandcss" target="_blank">this HTML & CSS course.</a></p>
+
     </body>
 </html>
