--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         
         <div class="gift-section">
             <h2 class="gift-title">The only person as badass as you 💪</h2>
+            <p><strong>Warning:</strong> contains reference to Chuck Norris that some readers might find frightening.</p>
             <div class="gift-img" id="gift-img-badass" role="img" aria-label="A wrapped present. A person slowly turning his face up"></div>
         </div>
 
         <div class="gift-section">
-            <h2 class="gift-title">This one's for you, my friend 🥂</h2>
+            <h2 class="gift-title">This one's for <em>you</em>, my friend 🥂</h2>
             <div class="gift-img" id="gift-img-cheers" role="img" ></div>
         </div>
 
