strong tag updates

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <div class="gift-section">
             <h2 class="gift-title">The only person as badass as you 💪</h2>
-            <p><strong>Warning:</strong> contains reference to Chuck Norris that some readers might find frightening.</p>
+            <p><strong>Warning</strong>: contains reference to Chuck Norris that some readers might find frightening.</p>
             <div class="gift-img" id="gift-img-badass" role="img" aria-label="A wrapped present. A person slowly turning his face up"></div>
         </div>
 
